--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ Por ello, la Cuaresma es el tiempo del perdón y de la reconciliación fraterna.
    <div data-role="content" align="center">
       <div>
          <h2>Católicos</h2><br>
-         <marquee scrollamount="15" direction="right"><img src="imagenes/Católicos.jpg"></marquee><br>
+         <marquee scrollamount="15" direction="right"><img src="imagenes/Catolicos.jpg"></marquee><br>
          <p>
 La Semana Mayor para los católicos es la época en la que se recuerda y celebra los hechos más relevantes en la vida de Jesús de Nazaret (la Pasión, Muerte y Resurrección), comenzando con el llamado Domingo de Ramos y finalizando el Domingo de Resurrección o también llamado de Pascua.
 Tiene lugar después de la Cuaresma, el ciclo de cuarenta días que abarca desde el Miércoles de Ceniza hasta el Jueves Santo. Concretamente, la celebración comienza el domingo de Ramos y finaliza el Sábado Santo, aunque en algunos lugares se adelanta al viernes anterior (el de Dolores) y se prolonga hasta el Domingo de Resurrección.</p><br>
@@ -267,7 +267,7 @@ En lo que respecta a la Semana Santa, indica que conmemoran la muerte del Señor
 De acuerdo con su tradición, la única acción que Jesús mandó a conmemorar en esta fecha es la última cena; por esto, la comunidad se reúne en el Salón del Reino para recordar esta acción, reflexionar sobre ella y el significado de la muerte y resurrección de Jesús, como rey mas no como Dios todopoderoso.
 En esta ceremonia, al igual que lo hizo Jesús, se reparte el pan y el vino, pero no todos son elegidos de participar de esta cena, pues este honor depende de los méritos de cada persona.</p><br>
 <h2>Mormónes</h2><br>
-<marquee scrollamount="15" direction="right"><img src="imagenes/Mormónes.jpg"></marquee><br>
+<marquee scrollamount="15" direction="right"><img src="imagenes/Mormones.jpg"></marquee><br>
 <p>La Semana Santa de los mormónes inicia desde el Lunes Santo, y como suelen hacer muy habitualmente durante muchas semanas del año, se reúnen en lo que llaman la “noche del hogar” para recordar pasajes de la Biblia protestante y, sobre todo, de sus libros sagrados. Son momentos de estar en familia, de compartir, y recordar cómo Jesús, que era un hombre según ellos, sólo un hombre, se hizo Dios también, otro dios, por sus propias fuerzas y comportamiento, según ellos afirman, y esto mismo es lo que ellos también quieren hacer, convertirse en dioses y regentar el gobierno de algunos sistemas solares del universo.
 En general, a pesar de sus diferencias de doctrina, es importante considerar que estos días no son el único momento para adorar a Dios y hallar comunión consigo mismo. Sumado a eso, las actividades en la familia también contribuyen a nutrir el alma. Por lo tanto, esta Semana Santa… ¡Ama, agradece y vive en paz!<br>
          </p>
